examples/Employees/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cherkasy</fullName>
                </value>
                <value>
                    <fullName>Ivano-Frankivsk</fullName>
                </value>
                <value>
                    <fullName>Khmelnytskyy</fullName>
                </value>
                <value>
                    <fullName>Kyiv</fullName>
                </value>
                <value>
                    <fullName>Lutsk</fullName>
                </value>
                <value>
                    <fullName>Lviv</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Poltava</fullName>
                </value>
                <value>
                    <fullName>Vinnytsia</fullName>
                </value>
                <value>
                    <fullName>Wroclaw</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HireDate__c</fullName>
        <label>HireDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1C Engineer</fullName>
                </value>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Automation specialist</fullName>
                </value>
                <value>
                    <fullName>Automation Test Engineer</fullName>
                </value>
                <value>
                    <fullName>BPO Specialist</fullName>
                </value>
                <value>
                    <fullName>Branding Coordinator</fullName>
                </value>
                <value>
                    <fullName>Business analyst</fullName>
                </value>
                <value>
                    <fullName>Chief Accountant</fullName>
                </value>
                <value>
                    <fullName>CTO</fullName>
                </value>
                <value>
                    <fullName>Data Analyst</fullName>
                </value>
                <value>
                    <fullName>Data Architect</fullName>
                </value>
                <value>
                    <fullName>Data Science Engineer</fullName>
                </value>
                <value>
                    <fullName>DB/BI Engineer</fullName>
                </value>
                <value>
                    <fullName>Deputy CEO/Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Deputy Production Director</fullName>
                </value>
                <value>
                    <fullName>Deputy QA Production Director</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>Director of European Business Development</fullName>
                </value>
                <value>
                    <fullName>Director of Operations</fullName>
                </value>
                <value>
                    <fullName>Engineer Level 1</fullName>
                </value>
                <value>
                    <fullName>Engineer Level 2</fullName>
                </value>
                <value>
                    <fullName>Financial Analyst</fullName>
                </value>
                <value>
                    <fullName>Financial Controller</fullName>
                </value>
                <value>
                    <fullName>Head of Account Management</fullName>
                </value>
                <value>
                    <fullName>Head of Corporate Information Systems</fullName>
                </value>
                <value>
                    <fullName>Head of Design Team</fullName>
                </value>
                <value>
                    <fullName>Head of Financial Department</fullName>
                </value>
                <value>
                    <fullName>Head of Recruitment</fullName>
                </value>
                <value>
                    <fullName>HR Administrator</fullName>
                </value>
                <value>
                    <fullName>HR Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of technician contacts.</description>
        <inlineHelpText>Active - Technician currently services our products. 
Inactive - Technician no longer services our products.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Employee</fullName>
        <active>true</active>
        <description>Should be used for Employee data</description>
        <label>Employee</label>
         
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Use to create standard contacts.</description>
        <label>Standard</label>
         
    </recordTypes>
    <recordTypes>
        <fullName>Technician</fullName>
        <active>true</active>
        <description>Use to create technician contacts.</description>
        <label>Technician</label>
         
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>